@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-26T01:25:35Z",
-  "count_outdated" : 714,
-  "uniques_outdated" : 407,
-  "count" : 748,
-  "uniques" : 428,
+  "timestamp" : "2023-07-26T08:19:35Z",
+  "count_outdated" : 715,
+  "uniques_outdated" : 408,
+  "count" : 749,
+  "uniques" : 429,
   "clones" : [
-    {
-      "timestamp": "2023-07-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-13T00:00:00Z",
       "count": 5,
@@ -130,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-07-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
