@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2023-07-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-13T00:00:00Z",
       "count": 5,
       "uniques": 3
@@ -71,6 +66,11 @@
       "timestamp": "2023-07-25T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-07-26T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
